# fastapi-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: ec46ad7fc181_added_all_tables.py
app/: main.py  schemas.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  recipe.py
app/clients/: reddit.py
app/core/: auth.py  config.py
app/crud/: base.py  crud_recipe.py  crud_user.py
app/db/: init_db.py  session.py
app/tests/: conftest.py
