[tool.black]
line=length = 79
include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | build
  | dist
  | ^.*\b(migrations)\b.*$
 )/
'''

[tool.poetry]
name = "app"
version = "0.0.3"
description = "Recipes"
authors = ["kevinbowen"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
Jinja2 = "^3.0.1"
SQLAlchemy = "^1.4.22"
alembic = "^1.6.5"
tenacity = "^8.0.1"
httpx = "^0.18.1"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests = "^2.27.1"
pre-commit = "^2.18.1"
black = "22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
