[metadata]
name = recipes
version = 0.0.3
url = https://github.com/kevinbowen777/recipes
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = A recipe API built with the FastAPI framework
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: FastAPI
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
project_urls =
    Source = https://github.com/kevinbowen777/recipes/

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    FastAPI >= 0.68.2

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude = 
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    migrations/,
    dist,
    images/
# https://www.flake8rules.com
ignore = 
    # slice notation whitespace
    E203
    # bare except
    E722
max-line-length = 79
per-file-ignores =

[isort]
profile = black
multi_line_output = 3
skip = .gitignore
extend_skip = .md,.json
